# postgress-optimize

./: .gitignore  .pdm-python  LINCENSE  README.md  compose.yaml  cpu_data.json  pyproject.toml
db/: Dockerfile  copy.sql
db/data/: card.csv  task.csv  user.csv
obsidian/postgress_optimize/: postgres-index.md  postgres-optimization-api.canvas  postgres-optimization.canvas  postgres-optimization1.md
prisma/: partial_types.py  schema.prisma
prisma/migrations/20250302025205_initial_migration/: migration.sql
prisma/migrations/20250304005345_default_card_active_value_to_true/: migration.sql
prisma/migrations/20250304190658_create_indexes_for_card_and_task/: migration.sql
src/: bootstrap.py  database.py  injector.py  main.py
src/dto/: CreateCardDto.py  CreateTaskDto.py  UserDto.py
src/repository/: AbstractRepository.py  CardRepository.py  TaskRepository.py  UserRepository.py  __init__.py
src/routes/: CardRouter.py  PingRouter.py  TaskRouter.py  UserRouter.py  __init__.py
src/service/: CardService.py  TaskService.py  UserService.py
teste/: data.json  gerador_grafico.py
teste/locust/: locust_file.py
teste/postgres/: get_postgres_exporter_data.py
