[project]
name = "postgres-optimize"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "seujorgenochurras", email = "senhor_dois_monitores@outlook.com" },
]

dependencies = [
    "prisma>=0.15.0",
    "fastapi>=0.115.11",
    "kink>=0.8.1",
    "ruff>=0.9.9",
    "uvicorn>=0.34.0",
]

requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn --reload --host 0.0.0.0 --port 3001 src.main:app"
ruff = "ruff format ."
